objects/Vertic_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>Configuration__c</fullName>
        <label>Configuration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <label>Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Vertic Setting</label>
    <pluralLabel>Vertic Settings</pluralLabel>
</CustomObject>